<resources>
    <string name="app_name">Recursos humanos</string>
    <string name="descricao_do_app">Esse é o nosso aplicativo de cadastro de funcionaries, aqui vamos cadastrar as informações e calcular o salário do funcionarie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_de_cadastro">Cadastro de informações</string>
    <string name="nome_sobrenome_edittext">Nome e sobrenome</string>
    <string name="hora_trabalhada">Horas trabalhadas</string>
    <string name="valor_hora">Valor por hora</string>
    <string name="botao_calcular">CALCULAR SALÁRIO</string>
</resources>